--- a/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.twig
@@ -20,7 +20,7 @@
 <div {{ attributes }}>
   <div class="flex space-x-3">
     <div class="flex-none">
-      {{ pattern('icon_spritemap', {icon: 'alert--' ~ variant } ) }}
+      {{ pattern('icon', {icon: 'alert--' ~ variant }, 'spritemap' ) }}
     </div>
     <div class="leading-tight flex flex-col space-y-2">
       <div class="font-bold">
