--- a/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.twig
@@ -13,10 +13,10 @@
     <div class="flex items-center justify-between">
       <span class="font-bold">{{ label }}</span>
       <div x-cloak :class="{ 'hidden' : selected == true }" >
-        {{ pattern('icon_spritemap', {icon: 'plus' } ) }}
+        {{ pattern('icon', {icon: 'plus' }, 'spritemap' ) }}
       </div>
       <div x-cloak :class="{ 'hidden' : selected == false }">
-        {{ pattern('icon_spritemap', {icon: 'minus' } ) }}
+        {{ pattern('icon', {icon: 'minus' }, 'spritemap' ) }}
       </div>
     </div>
   </button>
