--- a/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
@@ -23,16 +23,16 @@
           </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
         <a class="text-gray-500">
-          {{ pattern('icon_spritemap', {icon: 'facebook' } ) }}
+          {{ pattern('icon', {icon: 'facebook' }, 'spritemap' ) }}
         </a>
         <a class="ml-3 text-gray-500">
-          {{ pattern('icon_spritemap', {icon: 'instagram' } ) }}
+          {{ pattern('icon', {icon: 'instagram' }, 'spritemap' ) }}
         </a>
         <a class="ml-3 text-gray-500">
-          {{ pattern('icon_spritemap', {icon: 'twitter' } ) }}
+          {{ pattern('icon', {icon: 'twitter' }, 'spritemap' ) }}
         </a>
         <a class="ml-3 text-gray-500">
-          {{ pattern('icon_spritemap', {icon: 'linkedin' } ) }}
+          {{ pattern('icon', {icon: 'linkedin' }, 'spritemap' ) }}
         </a>
       </span>
         </div>
