--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -84,7 +84,7 @@
             {% if item.below %} @click="submenuIsOpen = !submenuIsOpen;" {% endif %}
             :class="{'rotate-180': submenuIsOpen, 'rotate-0': !submenuIsOpen}"
           >
-            {{ pattern('icon_spritemap', {icon: 'sort-down' } ) }}
+            {{ pattern('icon', {icon: 'sort-down' }, 'spritemap' ) }}
           </div>
         {% endif %}
       </div>
