--- a/starter-kits/tailwind/source/default/patterns/03-organisms/slider/slider.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/slider/slider.twig
@@ -24,12 +24,12 @@
   <div class="splide__arrows">
     <div class="group">
       <button class="splide__arrow splide__arrow--prev flex items-center justify-center absolute right-full mr-3 top-1/2 -translate-y-1/2 w-[42px] h-[42px] border border-2 rounded-full border-gray-900 dark:border-white dark:group-hover:border-blue-300 group-hover:border-blue-300">
-        {{ pattern('icon_spritemap', {icon: 'chevron-left' } ) }}
+        {{ pattern('icon', {icon: 'chevron-left' }, 'spritemap' ) }}
       </button>
     </div>
     <div class="group">
       <button class="splide__arrow splide__arrow--next flex items-center justify-center absolute left-full ml-3 top-1/2 -translate-y-1/2 w-[42px] h-[42px] border border-2 rounded-full border-gray-900 dark:border-white dark:group-hover:border-blue-300 group-hover:border-blue-300">
-        {{ pattern('icon_spritemap', {icon: 'chevron-right' } ) }}
+        {{ pattern('icon', {icon: 'chevron-right' }, 'spritemap' ) }}
       </button>
     </div>
   </div>
