feat(button): button in 4 variants, with different sizes, icons, colors, shapes and states. fix(icon, icon_spritemap): minor changes (to be reviewed) fix(tailwindconfig): spacings added

--- a/presets/icon-spritemap/patterns/icon.twig
+++ b/presets/icon-spritemap/patterns/icon.twig
@@ -1,7 +1,8 @@
 {# SETTINGS #}
 {% set scale = scale|default(1) %}
+{% set padding = padding|default('square') %}
 {% set fill_color = fill_color|default('fill-current') %}
-{% set padding = pattern_configuration('svg_icon', 'icon', 'padding')[padding|default('square')] %}
+{% set padding = pattern_configuration('icon_spritemap', variant, 'padding')[padding] %}
 {% set wrapper_classes = ([
   padding != '' ? 'flex items-center aspect-[1/1]',
 ] | sort | join(' ') | trim) %}
