fix: configs setup.

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
@@ -49,7 +49,7 @@ Classes
   padding,
   colors,
 ] %}
-{% if icon is not empty and variant != 'icon'%}
+{% if icon is not empty and variant != 'icon' %}
   {% set icon_spacing = pattern_configuration('button', variant, 'size')['icon_spacing'][size] %}
   {% set icon_spacing = 'mr-'~icon_spacing %}
 {% endif %}
@@ -69,11 +69,12 @@ Classes
 Template
 #}
 <{{ tag_name }} {{ attributes.addClass(classes | sort | join(' ') | trim).setAttribute('target', target).setAttribute('title', title) }}{% if disabled == true %}disabled{% endif %} style="word-break: break-word">
-  {% if variant != 'icon' %}
-    {{ text }}
-  {% endif %}
+{% if variant != 'icon' %}
+  {{ text }}
+{% endif %}
   {% if icon is not empty %}
-    <div class="{{ icon_alignment == 'left' ? 'mr-2' : 'ml-2' }}"></div>
-    {{ pattern('icon', {icon: icon }, 'spritemap' ) }}
+    <div class="{% if variant != 'icon' %} {{ icon_alignment == 'left' ? 'mr-2' : 'ml-2' }}{% endif %}">
+      {{ pattern('icon', {icon: icon }, 'spritemap' ) }}
+    </div>
   {% endif %}
 </{{ tag_name }}>
