--- a/starter-kits/tailwind/source/default/patterns/02-molecules/breadcrumb/breadcrumb.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/breadcrumb/breadcrumb.twig
@@ -8,22 +8,22 @@
  */
 #}
 
-<nav role="navigation" aria-labelledby="system-breadcrumb">
+<nav class="relative" role="navigation" aria-labelledby="system-breadcrumb">
   {% embed "@organisms/container/container.twig" with {padding_bottom: 'none', breadcrumb: breadcrumb} only %}
     {% block content %}
-      <ol class="flex items-center">
+      <ol class="flex items-center overflow-auto">
         {% for item in breadcrumb %}
           <li class="flex items-center">
             {% if item.url %}
-              <a class="text-base underline hover:no-underline text-black"
+              <a class="text-base underline hover:no-underline w-max text-black"
                  href="{{ item.url }}">{{ item.text }}</a>
             {% else %}
-              <div class="text-xs text-black font-bold">
+              <div class="text-xs text-black font-bold w-max">
                 {{ item.text }}
               </div>
             {% endif %}
             {% if loop.last == false %}
-              <div class="mx-[17px] w-[13px] h-[11px] text-neutral-500">
+              <div class="mx-[9px] lg:mx-[17px] w-[13px] h-[11px] text-neutral-500">
                 {{ pattern('icon', {icon: 'chevron-right' }, 'spritemap' ) }}
               </div>
             {% endif %}
