--- a/starter-kits/tailwind/source/default/patterns/02-molecules/pagination/pagination.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/pagination/pagination.twig
@@ -1,20 +1,84 @@
 {% if items %}
-  <nav class="flex flex-col bg-white items-center" role="navigation">
-    <ul class="flex flex-row">
-      {% if previous_url is not empty %}
-        <li class="font-sans px-4 py-4  lg:p-2 lg:px-4 text-gray-light">
-          <a class="text-md" href="{{ previous_url }}">{{ "Previous"|t }}</a>
+  <nav
+    class="flex items-center justify-center"
+    role="navigation"
+    aria-labelledby="{{ heading_id }}"
+  >
+    <h4 id="{{ heading_id }}" class="sr-only">{{ 'Pagination'|t }}</h4>
+    <ul class="{% if ajax|default(1) == 1 %} js-pager__items {% endif %}flex items-center justify-center gap-x-4">
+      {# Print first item if we are not on the first page. #}
+      {% if items.first and show_first_last == 1 %}
+        <li class="pager__item pager__item--first">
+          <a href="{{ items.first.href }}" title="{{ 'Go to first page'|t }}"{{ items.first.attributes|without('href', 'title') }}>
+            <span class="sr-only">{{ 'First page'|t }}</span>
+            <span aria-hidden="true">{{ items.first.text|default('« First'|t) }}</span>
+          </a>
         </li>
       {% endif %}
-      {% for i, item in items %}
-        <li class="font-sans px-4 py-4 lg:p-2 lg:px-4 text-black">
-          <a class="text-md {% if (item.in_active_trail) %}is-active{% endif %}"
-             href="{{ item.href }}">{{ i }}</a>
+      {# Print previous item if we are not on the first page. #}
+      {% if items.previous and show_actions == 1 %}
+        <li class="pager__item pager__item--previous">
+          <a href="{{ items.previous.href }}" title="{{ 'Go to previous page'|t }}" rel="prev"{{ items.previous.attributes|without('href', 'title', 'rel') }}>
+            <span class="sr-only">{{ 'Previous page'|t }}</span>
+            <span aria-hidden="true">{{ pattern('icon', {icon: 'chevron-left' }, 'spritemap' ) }}</span>
+          </a>
+        </li>
+      {% endif %}
+      {# Add an ellipsis if there are further previous pages. #}
+      {% if ellipses.previous and show_actions == 1 %}
+        <li class="pager__item pager__item--ellipsis border-transparent text-gray-500 p-4 inline-flex items-center text-sm font-medium" role="presentation">&hellip;</li>
+      {% endif %}
+      {# Now generate the actual pager piece. #}
+      {% if show_pages %}
+        {% for key, item in items.pages %}
+        <li class="pager__item">
+          {% if current == key %}
+            {% set title = 'Current page'|t %}
+          {% else %}
+            {% set title = 'Go to page @key'|t({'@key': key}) %}
+          {% endif %}
+          <a
+            href="{{ item.href }}"
+            title="{{ title }}"{{ item.attributes|without('href', 'title') }}
+            class="rounded-full py-2 px-4 inline-flex items-center text-base font-semibold {{ current == key ? 'is-active bg-black text-white hover:bg-purple-600' : 'bg-gray-100 text-black hover:bg-gray-300' }}"
+          >
+            <span class="sr-only">
+              {{ current == key ? 'Current page'|t : 'Page'|t }}
+              </span>
+            {{- key -}}
+          </a>
         </li>
       {% endfor %}
-      <li class="font-sans px-4 py-4  lg:p-2 lg:px-4 text-black">
-        <a class="text-md" href="{{ next_url }}">{{ "Next"|t }}</a>
-      </li>
+      {% endif %}
+      {# Add an ellipsis if there are further next pages. #}
+      {% if ellipses.next and show_actions == 1 %}
+        <li class="pager__item pager__item--ellipsis" role="presentation">&hellip;</li>
+      {% endif %}
+      {# Print next item if we are not on the last page. #}
+      {% if items.next and show_actions == 1 %}
+        <li class="pager__item pager__item--next">
+          <a
+            href="{{ items.next.href }}"
+            title="{{ 'Go to next page'|t }}"
+            rel="next"{{ items.next.attributes|without('href', 'title', 'rel') }}
+          >
+            <span class="sr-only">{{ 'Next page'|t }}</span>
+            <span aria-hidden="true">{{ pattern('icon', {icon: 'chevron-right' }, 'spritemap' ) }}</span>
+          </a>
+        </li>
+      {% endif %}
+      {# Print last item if we are not on the last page. #}
+      {% if items.last and show_first_last == 1 %}
+        <li class="pager__item pager__item--last">
+          <a
+            href="{{ items.last.href }}"
+            title="{{ 'Go to last page'|t }}"{{ items.last.attributes|without('href', 'title') }}
+          >
+            <span class="sr-only">{{ 'Last page'|t }}</span>
+            <span aria-hidden="true">{{ items.last.text|default('Last »'|t) }}</span>
+          </a>
+        </li>
+      {% endif %}
     </ul>
   </nav>
 {% endif %}
