--- a/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
@@ -1,6 +1,8 @@
-<footer class="text-gray-700">
+<footer>
   {% embed "@organisms/container/container.twig" with {
     bg: 'teal-dark',
+    padding_top: 'large',
+    padding_bottom: 'large',
     footer_menu: footer_menu
   } only %}
     {% block content %}
