--- a/starter-kits/tailwind/source/default/patterns/03-organisms/header/header.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/header/header.twig
@@ -1,6 +1,6 @@
 {# SETTINGS #}
 {% set header_classes = ([
-  'header-offset bg-white w-full z-30 top-0 text-white',
+  'header-offset bg-teal-800 w-full z-30 top-0 text-white',
   variant == 'fixed'? 'fixed h-18 w-full',
   variant == 'sticky'? 'sticky',
 ]) | sort | join(' ') | trim %}
@@ -9,14 +9,14 @@
 <header class="{{ header_classes }}">
   {% embed "@organisms/container/container.twig" with {menu: menu, language_select: language_select, padding_bottom: 'none'} only%}
     {% block content %}
-      <div class="flex py-5 justify-between md:flex-row">
-        <div class="w-3/6 md:w-2/6 max-w-xs md:max-w-7xl">
+      <div class="flex py-3 lg:py-6 justify-between md:flex-row">
+        <div class="w-[132px] lg:w-[152px] max-w-xs md:max-w-7xl">
           {% include "@atoms/logo/logo.twig" only %}
         </div>
         <div class="flex justify-end items-center flex-1 lg:hidden">
           {% include "@atoms/hamburger/hamburger.twig" only %}
         </div>
-        <div class="w-full flex-grow hidden text-black z-20 mt-2 sm:mt-6 bg-white absolute lg:static left-0 top-11 w-full lg:flex lg:justify-end lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent" :class="{'block': menuIsOpen, 'hidden': !menuIsOpen}">
+        <div class="w-full flex-grow hidden text-black z-20 mt-5 sm:mt-6 bg-white absolute lg:static left-0 top-11 w-full lg:flex lg:justify-end lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent" :class="{'block': menuIsOpen, 'hidden': !menuIsOpen}">
           {{ menu }}
         </div>
         <ul class="list-reset flex justify-end lg:flex-1 items-center hidden">
@@ -25,5 +25,4 @@
       </div>
     {% endblock %}
   {% endembed %}
-  {# <hr class="border-b border-gray-100 opacity-25 my-0 py-0"> #}
 </header>
