--- a/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.twig
@@ -9,52 +9,34 @@
 {# DEFAULTS #}
 
 {% set position = position|default('center_center') %}
-{% set image_position = image_position|default('center_center') %}
+{% set image_position = pattern_configuration('banner', 'position')['image_position'][position]|default('center_center') %}
 
 {# SETTINGS #}
-{% set position_classes =  {
-  'top_left': '',
-  'top_center': 'text-center justify-center ',
-  'top_right': 'text-right justify-end ',
-  'center_left': 'items-center',
-  'center_center': 'text-center items-center justify-center',
-  'center_right': 'text-right items-center justify-end',
-  'bottom_left': 'items-end',
-  'bottom_center': 'text-center items-end justify-center',
-  'bottom_right': 'text-right items-end justify-end',
-} %}
+{% set position_classes = [
+  pattern_configuration('banner', 'position')['text_alignment'][position]
+] %}
 
-{% set image_position_classes =  {
-  'top_left': 'img-object-left-top',
-  'top_center': 'img-object-top',
-  'top_right': 'img-object-right-top',
-  'center_left': 'img-object-left',
-  'center_center': 'img-object-center',
-  'center_right': 'img-object-right',
-  'bottom_left': 'img-object-left-bottom',
-  'bottom_center': 'img-object-bottom',
-  'bottom_right': 'img-object-right-bottom',
-} %}
+{% set image_position_classes =  [
+  image_position
+] %}
 
 {%
 set height_classes = [
   'img-w-full img-h-full img-object-cover overflow-hidden',
-  height == 'small' ? 'h-[300px] md:h-[300px]',
-  height == 'default' ? 'h-[400px] md:h-[500px]',
-  height == 'large' ? 'h-[600px] md:h-[800px]',
+  pattern_configuration('banner', 'height')['height'][height]
 ]|sort|join(' ')
 %}
 {% set teaser %}{{- teaser -}}{% endset %}
 
 {# Template #}
-<div{{ attributes|default(create_attribute()).addClass('relative') }}>
+<div{{ attributes|default(create_attribute()).addClass('relative dark') }}>
   <div{{ create_attribute().addClass(height_classes).addClass(image_position_classes[image_position]) }}>{{ image }}</div>
   <div class="absolute top-0 left-0 w-full h-full flex">
-    {% embed "@organisms/container/container.twig" with {region_attributes: region_attributes, teaser: teaser, headline: headline, classes: 'flex-1 flex ' ~ position_classes[position]}  only %}
+    {% embed "@organisms/container/container.twig" with {padding_bottom: 'none', region_attributes: region_attributes, teaser: teaser, headline: headline, classes: 'flex-1 flex ' ~ position_classes[position]}  only %}
       {% block content %}
         <div class="p-6 dark:text-white">
           {% if teaser is not empty %}
-            <div{{ region_attributes.teaser|default(create_attribute()).addClass('bg-white p-4') }}>
+            <div{{ region_attributes.teaser|default(create_attribute()).addClass('bg-black bg-opacity-25 mix-blend-normal rounded-lg p-6') }}>
               {{ teaser }}
             </div>
           {% endif %}
