--- a/starter-kits/tailwind/source/default/patterns/02-molecules/rich-snippet/rich-snippet.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/rich-snippet/rich-snippet.twig
@@ -41,7 +41,9 @@ Template
       {{ text }}
     </p>
   {% endif %}
-  <div class="mt-5">
-    {{ action }}
-  </div>
+  {% if action %}
+    <div class="mt-5">
+      {{ action }}
+    </div>
+  {% endif %}
 </div>
